css/global.css
@font-face {
  font-family: "CooperHewitt Bold";
  src: url("../fonts/cooperh-heavy.otf") format("opentype");
}

@font-face {
  font-family: "Courier";
  src: url("../fonts/cour.ttf") format("truetype");
}

@font-face {
  font-family: "Courier Bold";
  src: url("../fonts/courbd.ttf") format("truetype");
}

html {
  scroll-behavior: smooth;
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
}

body {
  background-color: #0E0E0E;
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
  overflow-y: hidden;
}

/* NAVIGATION BAR */
.top-nav {
  display: flex;
  justify-content: center;
  height: 5vh;
  margin: 5px;
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
}

.cat-header {
  font-family: "Courier";
  color: #A7A7A7;
  font-size: 18px;
  margin: 5px;
}

.cat-header:hover {
  font-family: "Courier Bold";
  color: white;
  transition: .5s;
}

.cat-header a {
  color: inherit;
  text-decoration: none;
}

.cat-header a:hover {
  color: inherit;
  text-decoration: none;
}

/* // BRANDON WIN NAME HEADER ON NAVIGATION */
#name-header {
  font-family: "Courier Bold";
  color: #FFE600;
}

#name-header a {
  color: inherit;
  text-decoration: none;
}

#selected-cat-header {
  font-family: "Courier Bold";
  color: white;
}

#selected-cat-header a {
  color: inherit;
  text-decoration: none;
}

@media (max-width: 1200px) {
  .cat-header {
    font-size: 30px;
  }
}

@media (max-width: 500px) {
  .cat-header {
    font-size: 14px;
  }
}

